--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Ride and Show Technician at Universal Orlando ready to make the jump to being a developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Johnston, Rhode Island</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Competing in Brazilian Jiu Jitsu, Coaching, Riding Motorcycles, Travelling </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being a troubleshooting asset and Athlete</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Orlando, Florida</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always been technology inclined and after 14 years of mechanics/technical work, I've always found myself drifting to the software side of my work.</p>
     </section>
 
     <footer id="footer">
